--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
           ref: main
           fetch-depth: 1
 
+      - name: Add and Commit changes to pr-pages branch
+        run: ls -la
+
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.8
         # TODO: Maybe you want to always get the latest version
