--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
       - main
 
 jobs:
-  build_css:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,7 +25,7 @@ jobs:
       - name: Compile HTML from PUG files
         run: |
           npm i -g pug-cli
-          pug src/pug/*.pug --out .
+          pug src/pug/index.pug --out .
 
       - name: Add and Commit changes to pr-pages branch
         run: |
