--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
           git config --local user.name 'GitHub Action'
           git add css/*
           git add *.html
-          git commit -m 'Update compiled CSS files'
+          git diff-index --quiet HEAD || git commit -m 'Update compiled files'
           git push
