--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,13 @@ jobs:
       - name: Compile HTML from PUG files
         run: |
           npm i -g pug-cli
-          find src/pug/*.pug -type f -maxdepth 1 -exec pug -b src/pug {} --out . \; || true
-          find src/pug/articles -type d -maxdepth 1 -mindepth 1 -exec bash -c 'pug -b src/pug $1 --out articles/${1##*/}' bash {} \; || true
+          [ -d src/pug ] && find src/pug/*.pug -type f -maxdepth 1 -exec pug -b src/pug {} --out . \;
+          [ -d src/pug/articles ] && find src/pug/articles -type d -maxdepth 1 -mindepth 1 -exec bash -c 'pug -b src/pug $1 --out articles/${1##*/}' bash {} \;
 
       - name: Add and commit changes to main branch
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add css/* || true
-          git add articles/* || true
-          git add *.html || true
-          git diff-index --quiet HEAD || git commit -m 'Update compiled files'
+          git add css/* articles/* *.html || true
+          git diff --cached --quiet && git commit -m 'Update compiled files'
           git push
