--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,9 @@ jobs:
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
           git add css/* articles/* *.html || true
-          git diff --cached --quiet && git commit -m 'Update compiled files'
-          git push
+          if git diff --cached --quiet; then
+            git commit -m 'Update compiled files'
+            git push
+          else
+            echo "No changes to commit."
+          fi
