--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
           git add css/* articles/* *.html || true
-          if git diff --cached --quiet; then
+          if ! git diff --cached --quiet; then
             git commit -m 'Update compiled files'
             git push
           else
