--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add css/* articles/* *.html || true
+          git add css/* articles/* *.html > /dev/null 2>&1 || true
           if ! git diff --cached --quiet; then
             git commit -m 'Update compiled files'
             git push
