Fix article generation, oops...

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
             find src/pug/*.pug -type f -maxdepth 1 | xargs -I {} pug -b src/pug --out . {}
           fi
           if [ -d src/pug/articles ]; then
-            find src/pug/articles -type d -maxdepth 1 -mindepth 1 | xargs -I {} sh -c 'pug -b src/pug --out {} articles/$(basename {})'
+            find src/pug/articles -type d -maxdepth 1 -mindepth 1 | xargs -I {} sh -c 'pug -b src/pug --out articles/$(basename {}) {}'
           fi
       - name: Add and commit changes to main branch
         run: |
