--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add css/* articles/* *.html > /dev/null 2>&1 || true
+          git add 'css/*.css' '*.html' > /dev/null 2>&1 || true
           if ! git diff --cached --quiet; then
             git commit -m 'Update compiled files'
             git push
