Install gomplate with go

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,12 @@ jobs:
 
       - name: Compile HTML from PUG files
         run: |
-          # Install pug and gomplate
-          npm install -g --loglevel=silent pug-cli gomplate
+          # Install pug
+          npm install -g --loglevel=silent pug-cli
 
-          go version
+          # Install gomplate
+          go install github.com/hairyhenderson/gomplate/v3/cmd/gomplate@latest
+          gomplate --version
 
           # Compile top level html files
           if [ -d src/pug ]; then
